2005-07-10  Michal Nazarewicz  <m86@o2.pl>

	* cpuload.sh: Now more POSIX compatible (thx dozzie)

	* traf.sh: Now makes better use of awk.

	* null.c, null.sh: New file
	* README: null added

	* add, checkmail, get_mks_vir_bases, moz2elinks.pl, settitle,
	xcolor2rgb: New file
	* README: add, checkmail, get_mks_vir_bases, moz2elinks.pl, settitle,
	and xcolor2rgb added

	* quotes.txt: Some new quotes

2005-07-02  Michal Nazarewicz  <m86@o2.pl>

	* infinite-logger.c: New file
	* Makefile, README: infinite-logger added

	* LICENSE.gpl: New file

	* cpuload.sh, traf.sh: Now as Public Domain

	* mpd-state.c, mpd-state-wrapper.sh: New file
	* libmpdclient.h, libmpdclient.c: New file
	* Makefile: New file
	* README, TODO: mpd-state and mpd-state-wrapper.sh added

	* installkernel: New file
	* README, TODO: installkernel added

	* ai-pitr.pl, ai-sid.pl: New file
	* README: ai added

	* cutcom.c: New file
	* README, TODO: cutcom added

2005-07-01  Michal Nazarewicz  <m86@o2.pl>

	* cpuload.sh, traf.sh: New file
	* README: cpuload.sh and traf.sh added

	* FvwmTransFocus.c: New file
	* README, TODO: FvwmTransFocus added

	* cdiff.sed, cdiff.c: New file
	* timer.c: New file
	* README, TODO: cdiff and timer added

2005-06-30  Michal Nazarewicz  <m86@o2.pl>

	* load.c: New file
	* README, TODO: load added

	* the-book-of-mozilla.txt, quotes.txt: New file
	* README: the-book-of-mozilla.txt and quotes.txt added

	* malloc.c: Displays size after error

	* tuptime.c: Don't die if buptime have only 2 numbers

	* README, malloc.c: New file
	* TODO: malloc added

2005-06-29  Michal Nazarewicz  <m86@o2.pl>

	* LICENSE, LICENSE.AFL, TODO, tuptime.c: New file.