@@ -1,7 +1,8 @@
 2005-07-10  Michal Nazarewicz  <m86@o2.pl>
 
-	* cpuload.sh: Now more POSIX compatible (thx dozzie)
+	* cpuload.sh: More accurate (shows 2 digits after decimal points)
 
+	* cpuload.sh: Now more POSIX compatible (thx dozzie)
 	* traf.sh: Now makes better use of awk.
 
 	* null.c, null.sh: New file
